# markdown-version-annotations

./: .bandit.yml  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
markdown_version_annotations/: __init__.py
mkdocs_version_annotations/: __init__.py
