[tool.poetry]
name = "mkdocs-version-annotations"
version = "1.0.0"
description = "MkDocs plugin to add custom admonitions for documenting version differences"
authors = ["Glenn Matthews <glenn@e-dad.net>"]
license = "MIT"
repository = "https://github.com/glennmatthews/mkdocs-version-annotations"
readme = "README.md"
keywords = ["mkdocs"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    {include = "mkdocs_version_annotations"}
]
include = [
    "CHANGELOG.md",
    "LICENSE.txt",
]

[tool.poetry.plugins."mkdocs.plugins"]
mkdocs-version-annotations = 'mkdocs_version_annotations:MkDocsVersionAnnotationsPlugin'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.0"
black = "^22.8.0"
flake8 = "<4.0.0"
invoke = "^1.7.0"
mkdocs = "^1.3.0"
pylint = "^2.13.0"
pydocstyle = "^6.1.0"
toml = "^0.10"

[tool.bandit]
exclude_dirs = [".venv"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.pylint.master]
ignore=".venv"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pydocstyle]
convention = "google"
inherit = false
match = "(?!__init__).*\\.py"
match-dir = "(?!tests|migrations|development)[^\\.].*"
# D212 is enabled by default in google convention, and complains if we have a docstring like:
# """
# My docstring is on the line after the opening quotes instead of on the same line as them.
# """
# We've discussed and concluded that we consider this to be a valid style choice.
add_ignore = "D212"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-vv --doctest-modules"
